# deepguard

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.txt  Makefile  PROJECT_STRUCTURE.txt  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: analyze_single.py
src/deepguard/: __init__.py  analyzer.py  cli.py  models.py  report.py  utils.py
src/deepguard/techniques/: __init__.py  clone.py  ela.py  face.py  metadata.py  noise.py
tests/: __init__.py  test_cli.py  test_ela.py  test_metadata.py
